--- a/app/globals.css
+++ b/app/globals.css
@@ -98,6 +98,15 @@
       radial-gradient(circle at 50% 0%, #151515 0%, transparent 50%),
       radial-gradient(circle at 100% 0%, #111111 0%, transparent 50%);
   }
+
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
 }
 
 @keyframes mesh {
